--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Rafael Capre</title>
+        <title>Rafael Cardoso</title>
         <script type="text/javascript" src="js/pt.min.js"></script>
         <link href='https://fonts.google.com/specimen/Ubuntu?selection.family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
